--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.cts.db</groupId>
-	<artifactId>MQClient</artifactId>
+	<artifactId>MHSample</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>MQClient</name>
-	<description>MQClient</description>
+	<name>MHSample</name>
+	<description>MHSample</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
