--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.ibm.mqlight.sample</groupId>
   <artifactId>MQBackend</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>MQBackend</name>
