--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name: MQBackend
-  buildpack: java_buildpack
+  buildpack: liberty-for-java
   path: backend/target/MQBackend-1.0-jar-with-dependencies.jar
   services:
   - Message Hub-u4
